# xdot-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml
src/: impl_help.rs  layout.rs  lib.rs  xdot.rs  xdot_parse.rs
src/xdot/: attrs.rs  op_parser.rs
src/xdot/draw/: attrs.rs
src/xdot_parse/: draw.rs  op_parser.rs  shapes.rs
src/xdot_parse/draw/: attrs.rs
tests/: test_draw.py  test_parse.py  test_shapes.py
