[package]
name = 'xdot'
version = "0.2.3"
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2024'
description = 'Parse graphviz’ xdot draw instructions'
documentation = 'https://docs.rs/xdot'
readme = 'README.md'
repository = 'https://github.com/flying-sheep/xdot-rs'
license = 'GPL-3.0'
keywords = ['graphviz', 'graph']
categories = ['parser-implementations', 'rendering::data-formats']

[package.metadata.docs.rs]
all-features = true

[features]
## The `layout` feature allows to parse `xdot` attributes from
## [graphviz_rust]’s [Graph](graphviz_rust::dot_structures::Graph)s
## using [draw_graph].
layout = ['graphviz-rust', 'thiserror']
## The `extension-module` feature enables using the crate from Python.
extension-module = ['pyo3', 'pyo3/extension-module']
## The `pyo3` module is for testing Python features.
pyo3 = ['dep:pyo3']

[dependencies]
bitflags = '2.9.4'
document-features = { version = '0.2.11', optional = true }
graphviz-rust = { version = '0.9.6', optional = true }
nom = '8.0.0'
pest = '2.8.2'
pest_derive = '2.8.2'
thiserror = { version = '2.0.17', optional = true }
pyo3 = { version = '0.26.0', optional = true, features = ['abi3-py38', 'multiple-pymethods'] }
pastey = "0.1.1"

[build-dependencies]
rustc_version = '0.4.1'
