[build-system]
requires = ['maturin>=1.9,<2.0']
build-backend = 'maturin'

[project]
name = 'xdot-rs'
authors = [{ name = 'Philipp A.', email = 'flying-sheep@web.de' }]
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
]
license = 'GPL-3.0-or-later'
urls.Source = 'https://github.com/flying-sheep/xdot-rs'
dynamic = ['version', 'description']
requires-python = '>=3.8'
dependencies = []

[project.optional-dependencies]
dev = [
    'maturin',  # CLI
    'pre-commit',  # auto-formatting
]
test = [
    'pytest',
]

[tool.maturin]
module-name = 'xdot_rs'
features = ['extension-module']

[tool.ruff]
select = [
    'E',  # pycodestyle
    'F',  # pyflakes
    'I',  # isort
]
